Implementando metodo pegar valor unitario do item

--- a/src/main/webapp/produtosUI.xhtml
+++ b/src/main/webapp/produtosUI.xhtml
@@ -10,12 +10,12 @@
 	<title>Cadastro de Despesas</title>
 </h:head>
 
-<body bgcolor="#867979">
+<body>
 <h:outputStylesheet library="css" name="styles.css" />
 
 <h:form>
 
-    <table class="tabela"  align="center" width="70%">
+    <table class="tabela"  align="center" width="70%" border="1">
          <tr>
            <th class="cabecalho" colspan="5">Lista de Produtos</th>
          </tr>
