--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -6,6 +6,7 @@
         <title>Seminarios Academicos</title>
     </h:head>
     <h:body>
+        <h1>Edsonsão</h1>
         <h:outputLabel value="INDEX da Seminarios Academicos"/>
     </h:body>
 </html>
